# yolop-adas-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu.backup  Dockerfile.gpu.backup  download_to_usb.ps1  strip_onnx.py
.github/workflows/: docker-build-kaggle.yml  docker-publish.yml
cpp/: CMakeLists.cpu.backup.txt  CMakeLists.txt  Dockerfile  main.cpp  main.cpp.backup
frontend/: app.js  index.html  style.css
